# sat-catalogs-scripts

./: pyproject.toml  requirements.txt
src/sat_catalogs/: cli.py  orm.py  template_engine.py
src/sat_catalogs/functions/: dolibarr.py  erpnext.py  odoo.py
src/sat_catalogs/templates/dolibarr/: payment_methods.sql  payment_options.sql  products_services.sql
tests/: test_build_database.py
