[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat-catalogs-scripts"
version = "0.0.11"
authors = [{ name = "Alfredo Altamirano" }]
dependencies = [
    "click>=8.1.3, <9",
    "requests>=2.28.1, <3",
    "sqlalchemy>=2.0.20, <3",
    "jinja2>=3.1.3, <4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sat_catalogs"]

[project.scripts]
sat-catalogs = "sat_catalogs.cli:cli"
